start script fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "description": "discord bot",
   "scripts": {
-    "start": "BOT_TOKEN=${BOT_TOKEN} node index.js"
+    "start": "GIPHY_TOKEN=${GIPHY_TOKEN} BOT_TOKEN=${BOT_TOKEN} node index.js"
   },
   "dependencies": {
     "discord.js": "^11.3.2",
