--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "^4.16.3",
     "giphy-js-sdk-core": "^1.0.5",
     "googleapis": "^32.0.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
