--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
     "giphy-js-sdk-core": "^1.0.5",
