--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "discord-bot",
   "description": "discord bot",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -13,5 +17,9 @@
     "readline": "^1.3.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
