--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "googleapis": "^32.0.0",
     "readline": "^1.3.0",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
