--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "giphy-js-sdk-core": "^1.0.5",
     "googleapis": "^32.0.0",
+    "nodejs-meme-generator": "^1.0.2",
     "readline": "^1.3.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
