--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "giphy-js-sdk-core": "^1.0.5",
     "googleapis": "^32.0.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "nodejs-meme-generator": "^1.0.4",
     "readline": "^1.3.0",
