--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^32.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "mongoose": "^5.5.9",
     "nodejs-meme-generator": "^1.0.4",
     "readline": "^1.3.0",
     "request": "^2.87.0",
