--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "canvas": "^2.6.0",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
     "ffmpeg-binaries": "^4.0.0",
