--- a/package.json
+++ b/package.json
@@ -10,21 +10,18 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "canvas": "^2.6.0",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
-    "ffmpeg-binaries": "^4.0.0",
     "giphy-js-sdk-core": "^1.0.5",
     "googleapis": "^32.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^5.5.9",
-    "node-opus": "^0.3.3",
+    "nodejs-meme-generator": "^1.0.4",
     "readline": "^1.3.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
-    "socket.io-client": "^2.1.1",
-    "ytdl-core": "^1.0.0"
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
