--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "discord.js": "^11.3.2",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "giphy-js-sdk-core": "^1.0.5",
     "googleapis": "^32.0.0",
