--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
@@ -18,8 +19,9 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^5.5.9",
+    "needle": "^2.4.0",
     "readline": "^1.3.0",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "socket.io-client": "^2.1.1",
     "ytdl-core": "^1.0.0"
